# baidu-pytest-playwright-lab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  justfile  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
data/: README.md  __init__.py  test_data.py
docs/: README.md  design_book.md  final_report.md  locator_discovery_notes.md
pages/: README.md  __init__.py  baidu_map_page.py
reports/: README.md
reports/latex/: Makefile  README.md  main.tex
scripts/: failure_demo_generator.py
test-results/: README.md
tests/: README.md  test_geolocation.py  test_home.py  test_mobile.py  test_route.py  test_search.py
