[project]
name = "playwright-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "playwright>=1.59.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-html>=4.2.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.15.12",
]
