[project]
name = "playwright-test"
version = "0.1.0"
description = "Python Playwright automation lab for Baidu Map Web UI testing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "playwright>=1.59.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-html>=4.2.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--browser=chromium",
    "--tracing=retain-on-failure",
    "--screenshot=only-on-failure",
    "--video=retain-on-failure",
    "--html=reports/report.html",
    "--self-contained-html",
]
markers = [
    "smoke: core checks that verify the site and test harness are usable",
    "search: Baidu Map search scenarios",
    "route: route planning scenarios",
    "geo: geolocation permission and mocked-coordinate scenarios",
    "mobile: mobile viewport scenarios",
    "slow: scenarios expected to take longer because of network or map loading",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    ".cache",
    ".venv",
    "reports",
    "test-results",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
